--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             button: 'ใส่ขนมปัง'
         },
         {
-            bg: './asset/(รูป)ขนมปังบนจาน.png',
+            bg: './asset/(รูป)จานมีขนมปัง.png',
             text: '\nจานมีขนมปังแล้ว',
             button: 'ใส่หมูย่าง'
         },
